--- a/Tutorial/Views/Home/Index.cshtml
+++ b/Tutorial/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Search</h1>
+    <p class="lead">If you already know your lookupCode search for your vehicle using the form below.<br />
+    Or just go to the @Html.ActionLink("valuation","Valuation") page to get started.</p>
 </div>
 
