--- a/Tutorial/Views/Home/Valuation.cshtml
+++ b/Tutorial/Views/Home/Valuation.cshtml
@@ -43,7 +43,7 @@
                 <option value=@vehicle.id>@vehicle.make @vehicle.model @vehicle.lookupCode</option>
             }
         </select>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Recalculate">
     </form> 
 </div>
 <br><br><br>
