--- a/Tutorial/Views/PriceRecords/EditPriceRecord.cshtml
+++ b/Tutorial/Views/PriceRecords/EditPriceRecord.cshtml
@@ -8,7 +8,7 @@
 <h2>EditPriceRecord</h2>
 
 
-@using (Html.BeginForm("SaveEditedPriceRecord", "PriceRecords", FormMethod.Post))
+@using (Html.BeginForm("SaveEditedPriceRecord", "PriceRecords", FormMethod.Post, new { onsubmit = "return validateSaveEditedPRForm()" }))
 {
     @Html.AntiForgeryToken()
     
@@ -21,7 +21,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LookupCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LookupCode, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.LookupCode, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 @Html.ValidationMessageFor(model => model.LookupCode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -36,7 +36,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to PriceRecords", "PriceRecordsIndex", new { @page = 1 }, htmlAttributes: new { })
 </div>
 
 @section Scripts {
