Fixed EntityFramework connectionString

--- a/Tutorial/Views/Shared/_Layout.cshtml
+++ b/Tutorial/Views/Shared/_Layout.cshtml
@@ -23,8 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Valuation", "Valuation", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("PriceRecords", "PriceRecordsIndex", "PriceRecords", new { area = "" }, null)</li>
-
-                    <!-- <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li> -->
+                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
