--- a/Tutorial/Views/Shared/_Layout.cshtml
+++ b/Tutorial/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Valuation", "Valuation", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("PriceRecords", "PriceRecordsIndex", "PriceRecords", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("TestGeoLocation", "TestGeolocation", "Test", new { area = "" }, null)</li>
+
                 </ul>
             </div>
         </div>
