added extra p-element

--- a/Tutorial/Views/Test/TestGeolocation.cshtml
+++ b/Tutorial/Views/Test/TestGeolocation.cshtml
@@ -10,6 +10,7 @@
     <p id="demo">Click the button to get your position:</p>
     <button onclick="getLocation()">Get your Location</button>
 
+<p>This is something else...</p>
     <!--
         <div id="mapholder" style="height"></div>
    -->
